<resources>
    <string name="app_name">Käsekästchen</string>
    <string name="action_settings">Einstellungen</string>
    <string name="action_impressum">Impressum</string>
    <string name="action_logout">Abmelden</string>
    <string name="action_clear_data">Daten löschen</string>
    <string name="overview_fieldsize_prompt">Spielfeldgröße</string>
    <string name="overview_game_mode_prompt">Spielmodus</string>
    <string name="overview_username">KingSiegl</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Passwort</string>
    <string name="login_angemeldet_bleiben">Username speichern</string>
    <string name="login_button_text">Einloggen</string>
    <string name="register_button_text">Registrieren</string>
    <string name="register_title">Registrieren Sie sich. Danach können Sie das Spiel starten.</string>
    <string name="repeat_password_hint">Passwort wiederholen</string>
    <string name="dots">Dots</string>
    <string name="impressum_body_textview"><![CDATA[
                <u>SG Solutions AG - Lösungen für ihren Vorsprung</u><br><br>
                Firmensitz: Freising<br>
                Anschrift: 85354 Freising, Musterstraße 1, Deutschland<br><br>
                Telefon: +49(0)8161/123-456<br>
                Fax: +49(0)8161/123-460<br>
                Email: support@sg-solutions.de<br><br>
                Geschäftsführung:<br>
                Aaron Siegl, Raul Gonzales Godoy<br>
                Rechtsform: Kapitalgesellschaft<br>
                Unternehmensgegenstand: Sofwareentwicklung<br>
                UID Nummer: DE 54611651<br>
                Handelsregisternummer: HRB 846552<br>
                Handelsregistergericht: Amtsgericht München<br><br>]]> </string>

    <string name="impressum_header_textview"><![CDATA[ <u>Impressum</u>]]></string>
    <string name="introduction_header_textview"><![CDATA[ <u>Spielanleitung</u>]]></string>
    <string name="introduction_body_textview"><![CDATA[
                 <u>Ziel des Spiels:</u><br>
                 Es geht darum, möglichst viele Kästchen zu erobern. Ein Kästchen wird erobert, wenn die vierte Wand (Seitenkante) platziert wird. In jedem Zug kannst du eine Wand setzen.
                 Wenn du ein Kästchen erobert hast, musst du gleich noch einen Zug machen - und kannst so vielleicht gleich ein weiteres Kästchen bekommen.
                 Wenn alle Wände gesetzt sind, ist das Spiel zu Ende. Derjenige, der am meisten Kästchen erobert hat, ist der Gewinner des Spiels.<br><br>
                 <u>Das Setzen von Wänden:</u><br>
                 Wenn du am Zug bist, musst du eine Wand setzen. Klicke dazu auf eine horizontale oder vertikale Linie, wo noch keine Wand steht.<br><br>
                 <u>Kästchen erobern:</u><br>
                 Sobald alle vier Wände eines Kästchens (d. h. alle vier Seiten eines Quadrats) platziert wurden, gehört das Kästchen demjenigen, der die letzte Wand gesetzt hat.<br><br>
                 <u>Spielende:</u><br>
                 Das Spiel ist zu Ende, wenn alle Wände gesetzt sind. Der Gewinner ist derjenige, der die meisten Kästchen erhalten hat. ]]></string>
    <string name="overview_help_description_button">1. Wählen Sie die Spielfeldgröße aus. (z.B. "3x3" erzeugt ein Spielfeld mit 9 Kästchen).\n\n
                                        2. Wählen Sie den Spielmodus aus. (z.B. "MultiPlayer". Spielen Sie gegen den Computer).\n\n
                                        3. Drücken Sie "Starten" und beginnen Sie das Spiel. </string>
    <string name="overview_help_title_button">Spieleinstellungen:</string>
    <string name="fragment_game_player1_textview">Player 1</string>
    <string name="fragment_game_player2_textview">Player 2</string>
    <string name="not_available_textview_title">Ups!</string>
    <string name="not_available_textview">Dieser Spielmodus wird in Kürze zur Verfügung stehen! \n\nViel Spaß!</string>
    <string name="dialog_leave_app">"Wollen Sie die App wirklich verlassen?</string>
    <string name="dialog_leave_game">"Wollen Sie das Spiel wirklich beenden?</string>

    <string-array name="overview_size_array">
        <item>3x3</item>
        <item>4x4</item>
        <item>5x5</item>
    </string-array>
    <string-array name="overview_game_mode_array">
        <item>Single-Player</item>
        <item>Multi-Player</item>
        <item>Online Multi-Player</item>

    </string-array>
    <string name="fragment_overview_computer_name">Computer</string>
    <string name="overview_start_text">Spiel starten</string>
    <string name="overview_introduction_text">Anleitung</string>

</resources>


