<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding"
    tools:context="appworld.gogogo.bsgame.fragments.RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/register_title_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/register_title"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/register_subtitle_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:layout_marginBottom="@dimen/padding"
            android:text="@string/register_subtitle" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_username_textinputlayout"
            android:layout_width="match_parent"
            android:layout_height="72dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/register_username_textinputedittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/username_hint" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_password_textinputlayout"
            android:layout_width="match_parent"
            android:layout_height="72dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/register_password_textinputedittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password_hint" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_repeatpassword_textinputlayout"
            android:layout_width="match_parent"
            android:layout_height="72dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/register_repeatpassword_textinputedittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/repeat_password_hint" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/register_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding"
            android:layout_gravity="center"
            android:text="@string/register_button_text" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
